tried out carousel and cards, still undecided.

--- a/index.html
+++ b/index.html
@@ -10,11 +10,12 @@
     <title>PWP - Patanjali ૐ Yogini</title>
 
     <!-- Bootstrap core CSS insert here:-->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- CSS Stylesheet insert here:-->
-    <link rel="stylesheet type=text/css" href="public_html/main-style.css">
+    <link rel="stylesheet type=text/css" href="main-style.css">
     <!-- Script file insert here:-->
-    <script src="public_html/script.js"></script>
+    <script src="script.js"></script>
 
 </head>
 
@@ -23,7 +24,8 @@
 <nav class="navbar navbar-expand-md navbar-dark p-3 bg-dark">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Patanjali ૐ Yogini</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
+                aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -37,43 +39,69 @@
     </div>
 </nav>
 
-<!--index-image-1-->
+<!--index-image-1 (Lord Ganesha)-->
 <div class="index-image-1">
-    <img src="public_html/images/yoga-is-samadhi.png" class="img-fluid" alt="Ganesha">
+    <img src="public_html/images/yoga-is-samadhi-saffron.png" class="img-fluid" alt="Lord Ganesha">
 </div>
 
 <!--Section-1-->
 <div class="section-1">
     <div class="container-fluid-quote-1">
         <p><i>"Yoga Chittavritti Nirodha"</i></p>
-        <p>Maharshi Patanjali, founder of the Yogic Philosophy defines Yog as concentration.</p>
-        <p>The above saying translates to <i>"stoppage of fluctuations of the mind."</i></p>
+        <p>Maharshi Patanjali, ancient rishi and founder of the Yoga Sutras (ca. 250 B.C.) defines Yog as concentration.</p>
+        <p>The above saying translates to <i>"stoppage of the fluctuations of the mind."</i></p>
     </div>
 </div>
 
 <!--Section-2-->
 <div class="section-2">
-    <div class="row">
-        <div class="col-6 md py-4">
-            <div class="image-section-2">
-                <img src="public_html/images/india-01.jpg" alt="India-1">
-            </div>
+    <div class="py-2 my-2">
+        <div class="container-section-2">
+            <div class="row">
+                <div class="col-sm-6">
+                    <img src="public_html/images/india-01.jpg" class="img-fluid" alt="India." width="750" height="550">
+                </div>
 
-            <div class="quote-3">
-                <p>"Yoga is Samadhi - a deep state of concentration."<br>
-                    The stillness of your mind can be attained once you learn how to keep your body still.</p>
-            </div>
-
-            <div class="image-section-2 img-fluid">
-                <img src="public_html/images/oil-lamp.jpg" alt="oil-lamp">
+                <div class="col-sm-6">
+                    <p><b><i>"Yoga is Samadhi - a deep state of concentration."</i></b></p>
+                </div>
             </div>
         </div>
     </div>
 </div>
 
 
-<!--Section-3-->
 
+<!--<div class="section-2">
+    <img class=india src="public_html/images/india-01.jpg" alt="India-1" width="750" height="550">
+    <div class="quote-2">
+        <p><b><i>"Yoga is Samadhi - a deep state of concentration."</i></b></p>
+    </div>
+</div>-->
+
+<!--Section-3-->
+<div class="section-3">
+    <div class="py-2 my-2">
+        <div class="container-section-2">
+            <div class="row">
+                <div class="col-sm-6">
+                    <img src="public_html/images/oil-lamp.jpg" class="img-fluid" alt="India." width="750" height="550">
+                </div>
+
+                <div class="col-sm-6">
+                    <p><b><i>The stillness of your mind can be attained once you learn how to keep your body still.</i></b></p>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
+<!--<div class="section-3">
+    <img class=oil-lamp src="public_html/images/oil-lamp.jpg" alt="oil-lamp" width="750" height="550">
+    <div class="quote-3">
+        <p><b><i>The stillness of your mind can be attained once you learn how to keep your body still.</i></b></p>
+    </div>
+</div>-->
 
 <!--Section 4-->
 <div class="section-4">
@@ -120,28 +148,111 @@
     </div>
 </div>
 
+    <!--<div class="card" style="width: 18rem;">
+        <img src="public_html/images/conditioning-2.jpg" class="card-img-top" alt="Conditioning">
+        <div class="card-body">
+            <p class="Conditioning">Conditioning is a method that helps to increase focus and concentration. It is often done
+                guided with the instructor or guru reciting a prayer.</p>
+        </div>
+    </div>
+
+    <div class="card" style="width: 18rem;">
+        <img src="public_html/images/hastapadasana.jpg" class="card-img-top" alt="Asanas">
+        <div class="card-body">
+            <p class="Asanas">he Asanas I am certified to teach are taken from traditional Hatha Yoga. They are chosen based on
+                the overall directional stretch of the spine and are beginner friendly. They can be easily adjusted
+                to match more difficult variations.</p>
+        </div>
+    </div>
+</div>-->
+
+<!--<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
+                aria-current="true" aria-label="Conditioning"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
+                aria-label="Asanas"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
+                aria-label="Pranayams"></button>
+        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
+                aria-label="Meditation"></button>
+    </div>
+    <div class="carousel-inner">
+        <div class="carousel-item active border-bottom-darkorange">
+            <img src="public_html/images/conditioning-3.jpg" class="d-block w-100" alt="Conditioning">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Conditioning</h5>
+                <p>Conditioning is a method that helps to increase focus and concentration. It is often done
+                    guided with the instructor or guru reciting a prayer.</p>
+            </div>
+        </div>
+        <div class="carousel-item border-bottom-darkorange">
+            <img src="public_html/images/hastapadasana.jpg" class="d-block w-100" alt="Asanas">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Asanas</h5>
+                <p>The Asanas I am certified to teach are taken from traditional Hatha Yoga. They are chosen based on
+                    the overall directional stretch of the spine and are beginner friendly. They can be easily adjusted
+                    to match more difficult variations.</p>
+            </div>
+        </div>
+        <div class="carousel-item border-bottom-darkorange">
+            <img src="public_html/images/pranayama.jpg" class="d-block w-100" alt="Pranayams">
+            <div class="carousel-caption d-none d-md-block">
+                <h5>Pranayamas</h5>
+                <p>Pranayams or Pranayamas are breathing exercises to increase the capacity of your lungs and help with
+                    oxygen and blood flow. Depending on individual conditions there are special varieties that can aid
+                    in overall balance of the system. There are also Pranayams that are safe for everyone to practice,
+                    i.e. Brahmari.</p>
+            </div>
+        </div>
+    </div>
+    <div class="carousel-item border-bottom-darkorange">
+        <img src="public_html/images/shavasana.jpg" class="d-block w-100" alt="Meditation">
+        <div class="carousel-caption d-none d-md-block">
+            <h5>Meditation</h5>
+            <p>Every Yoga session should finish with mindful relaxation. This is often achieved through Shavasana ("The
+                Corpse Pose"). Similar to conditioning at the beginning of each session, you can finish with a prayer or
+                simply by chanting Aum ૐ.</p>
+        </div>
+    </div>
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Previous</span>
+    </button>
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Next</span>
+    </button>
+</div>-->
+
 <!--Section-5: About Me-->
 <div class="section-5">
     <div class="container-fluid">
-
         <img src="public_html/images/mirjam.jpg" class="rounded-circle" alt="Mirjam" width="250" height="250">
         <h1>About Me</h1>
-        <div class="row-g2">
-            <div class="about-me">
-                <div class="column-1">
-                    <p>My love for Yoga did not develop overnight, it took me a few years to get into it. Being someone who used to enjoy running a lot, I found it rather difficult to sit down on a mat and do Asanas. However, after giving it another try, I was astounded by the results that I got from practicing Kundalini Yoga. Kundalini Yoga opened up the door to meditation and my love for Indian culture and philosophy. I wanted to learn more about Yogic Philosophy and traditional forms of Yoga and I wanted to learn from Indian teachers. </p>
-                </div>
-                <div class="column-2">
-                    <p>After being in lockdown for such a long period, it gave me the opportunity to look inward but also do some research. The Yoga Institute Santacruz, Mumbai is the oldest accredited Yoga school in the world. The current guru, Dr. Hansaji Yogendra, wife of the late Dr. Yogendra, had an influential role in the formulation of a formal syllabus for Yoga schools across the world. To this day she is one of India's most influential experts in the field of Yoga. I thoroughly enjoyed my learning experience with my Indian teachers and "batch mates". I miss them dearly. We still message each other or meet up via Zoom to practice together.</p>
-                </div>
-                <div class="column-3">
-                    <p>The sequence that I follow is the sequence that I learned from my Indian teachers. I was also trained in Kriyas and Pranayamas which I practice. Although I practice Kundalini yoga, I do not teach it. The asanas that I am certified to teach are traditional and safe beginners friendly asanas taken from Hatha Yoga. If you are interested in learning about Yogic Philosophy and techniques that go beyond obscure asanas performed by Western celebrities, I suggest you check out their website.</p>
-                    <p>Where I got certified as RYT 200: The Yoga Institute Santacruz, Mumbai.</p>
-                    <p>Find out more about my accredited Yoga school here:</p>
-                    <a href="https://theyogainstitute.org/">The Yoga Institute Mumbai Website</a><br>
-                    <a href="https://www.youtube.com/watch?v=jwDhDbeShQw&t=8s/">YouTube Video on The Yoga Institute</a>
-                </div>
-            </div>
+        <div class="about-me">
+            <p>My love for Yoga did not develop overnight, it took me a few years to get into it. Being someone who used
+                to enjoy running a lot, I found it rather difficult to sit down on a mat and do Asanas. However, after
+                giving it another try, I was astounded by the results that I got from practicing Kundalini Yoga.
+                Kundalini Yoga opened up the door to meditation and my love for Indian culture and philosophy. I wanted
+                to learn more about Yogic Philosophy and traditional forms of Yoga and I wanted to learn from Indian
+                teachers. </p><br>
+            <p>After being in lockdown for such a long period, it gave me the opportunity to look inward but also do
+                some research. The Yoga Institute Santacruz, Mumbai is the oldest accredited Yoga school in the world.
+                The current guru, Dr. Hansaji Yogendra, wife of the late Dr. Yogendra, had an influential role in the
+                formulation of a formal syllabus for Yoga schools across the world. To this day she is one of India's
+                most influential experts in the field of Yoga. I thoroughly enjoyed my learning experience with my
+                Indian teachers and "batch mates". I miss them dearly. We still message each other or meet up via Zoom
+                to practice together.</p><br>
+            <p>The sequence that I follow is the sequence that I learned from my Indian teachers. I was also trained in
+                Kriyas and Pranayamas which I practice. Although I practice Kundalini yoga, I do not teach it. The
+                asanas that I am certified to teach are traditional and safe beginners friendly asanas taken from Hatha
+                Yoga. If you are interested in learning about Yogic Philosophy and techniques that go beyond obscure
+                asanas performed by Western celebrities, I suggest you check out their website.</p><br>
+             <p>Where I got certified as RYT 200: The Yoga Institute Santacruz, Mumbai.</p>
+             <p>Find out more about my accredited Yoga school here:</p>
+             <a href="https://theyogainstitute.org/">The Yoga Institute Mumbai Website</a><br>
+             <a href="https://www.youtube.com/watch?v=jwDhDbeShQw&t=8s/">YouTube Video on The Yoga Institute</a>
         </div>
     </div>
 </div>
@@ -149,33 +260,32 @@
 <!--Section-6: Contact Form & Weekly Mantra Sign Up-->
 <!--Contact Form-->
 <div class="section-6">
-    <div class="container-fluid">
+    <h1 class="greeting">Namaste!</h1>
+    <h1>ૐ Contact me here to inquire about classes:</h1>
+        <div id="formContainer" class="container">
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-contact">Your Name</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
+                <label for="exampleFormControlInput1" class="form-contact">Your Email</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+                <label for="exampleFormControlInput1" class="form-contact">Subject</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1">
+            </div>
+            <div class="mb-3">
+                <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
+                <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+            </div>
+            <button class="button-message">Submit Message</button>
+            <br>
 
-        <h1 class="greeting">Namaste!</h1>
-
-        <h1>ૐ Contact me here to inquire about classes:</h1>
-
-        <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-contact">Your Name</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="Name">
-            <label for="exampleFormControlInput1" class="form-contact">Your Email</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-            <label for="exampleFormControlInput1" class="form-contact">Subject</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1">
+            <!--Weekly Mantra-->
+            <h1>ૐ Sign up for a weekly mantra!</h1>
+            <div class="mb-3">
+                <label for="exampleFormControlInput1" class="form-mantra">Email address</label>
+                <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
+            </div>
+            <button class="button-mantra">Receive Mantra</button>
         </div>
-        <div class="mb-3">
-            <label for="exampleFormControlTextarea1" class="form-label">Your Message</label>
-            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
-        </div>
-        <button class="button-message">Submit Message</button>
-
-        <!--Weekly Mantra-->
-        <h1>ૐ Sign up for a weekly mantra!</h1>
-        <div class="mb-3">
-            <label for="exampleFormControlInput1" class="form-mantra">Email address</label>
-            <input type="email" class="form-control" id="exampleFormControlInput1" placeholder="name@example.com">
-        </div>
-        <button class="button-mantra">Receive Mantra</button>
     </div>
 </div>
 
@@ -187,7 +297,9 @@
 </footer>
 
 <!-- Script from Bootstrap insert here (at the bottom of body):-->
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 
 </body>
 
