--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <!-- Bootstrap 5.2 core CSS insert here:-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
-    <!-- CSS Stylesheet insert here:-->
+    <!-- Main CSS Stylesheet insert here:-->
     <link rel="stylesheet type=text/css" href="main-style.css">
-    <!-- Script file insert here:-->
-    <script src="script.js"></script>
+    <!-- Main Script file insert here:-->
+    <script src="main-script.js"></script>
 
 </head>
 
@@ -289,6 +289,8 @@
     </div>
 </div>
 
+<div class="output-area"></div>
+
 <!--Sticky Footer-->
 <footer class="footer mt-auto p-3 bg-dark">
     <div class="footer-container">
@@ -311,6 +313,9 @@
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/jquery.validate.min.js" integrity="sha512-37T7leoNS06R80c8Ulq7cdCDU5MNQBwlYoy1TX/WUsLFC2eYNqtKlV0QjH7r8JpG/S0GUMZwebnVFLPd6SU5yg==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.3/additional-methods.min.js" integrity="sha512-XZEy8UQ9rngkxQVugAdOuBRDmJ5N4vCuNXCh8KlniZgDKTvf7zl75QBtaVG1lEhMFe2a2DuA22nZYY+qsI2/xA==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+
+<!--Custom jquery script-->
+<script src="form-script.js"></script>
 
 </body>
 
