--- a/public_html/documentation/milestone-2.html
+++ b/public_html/documentation/milestone-2.html
@@ -34,11 +34,11 @@
     <p>My website will feature a layout that will be responsive on both desktop and a mobile devices. The layout was created on www.balsamiq.com and both images are added to the images directory under the main documentation directory.</p>
 
     <h2>Mobile Layout</h2>
-    <img src="../images/patanjali-yogini-mobile-wireframe.png" alt="Mobile Layout" width="45%" height="45%">
+    <img src="wireframes/patanjali-yogini-mobile-wireframe.png" alt="Mobile Layout" width="45%" height="45%">
 
 
     <h2>Desktop Layout</h2>
-    <img src="../images/patanjali-yogini-website-wireframe.png" alt="Desktop Layout" width="750px" height="950px">
+    <img src="wireframes/patanjali-yogini-website-wireframe.png" alt="Desktop Layout" width="750px" height="950px">
 
 </body>
 </html>
