--- a/index.html
+++ b/index.html
@@ -12,11 +12,11 @@
     <!-- Bootstrap 5.2 core CSS insert here:-->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
     <!-- Main CSS Stylesheet insert here:-->
-    <link rel="stylesheet type=text/css" href="main-style.css">
+    <link rel="stylesheet type=text/css" href="styles-main/main-style.css">
     <!-- Main Script file insert here:-->
-    <script src="main-script.js"></script>
+    <script src="scripts/main-script.js"></script>
     <!-- Form Script:-->
-    <script src="form-script.js"></script>
+    <script src="scripts/form-script.js"></script>
 
 </head>
 
@@ -42,7 +42,7 @@
 
 <!--index-image-1 (Lord Ganesha)-->
 <div class="index-image-1">
-    <img src="public_html/images/yoga-is-samadhi-saffron.png" class="img-fluid" alt="Lord Ganesha">
+    <img src="images/yoga-is-samadhi.png" class="img-fluid" alt="Lord Ganesha">
 </div>
 
 <!--Section-1-->
@@ -60,7 +60,7 @@
         <div class="container-section-2">
             <div class="row">
                 <div class="col-sm-6">
-                    <img src="public_html/images/india-01.jpg" class="img-fluid" alt="India." width="750" height="550">
+                    <img src="images/india-01.jpg" class="img-fluid" alt="India." width="750" height="550">
                 </div>
 
                 <div class="col-sm-6">
@@ -86,7 +86,7 @@
         <div class="container-section-2">
             <div class="row">
                 <div class="col-sm-6">
-                    <img src="public_html/images/oil-lamp.jpg" class="img-fluid" alt="India." width="750" height="550">
+                    <img src="images/oil-lamp.jpg" class="img-fluid" alt="India." width="750" height="550">
                 </div>
 
                 <div class="col-sm-6">
@@ -110,7 +110,7 @@
         <h1>Sequence</h1>
         <div class="row">
             <div class="col-md-12 py-4 d-flex align-items-center">
-                <img src="public_html/images/conditioning-4.jpg" class="rounded-circle float" alt="conditioning" width="300" height="300">
+                <img src="images/conditioning-4.jpg" class="rounded-circle float" alt="conditioning" width="300" height="300">
                 <div class="rounded border border-white p-3 bg-light text-center mt-4 mb-4 mx-4 h-auto card">
                     <h2>1. Conditioning</h2>
                     <p-1>ૐ</p-1>
@@ -120,7 +120,7 @@
             </div>
 
             <div class="col-md-12 py-4 d-flex align-items-center">
-                <img src="public_html/images/hastapadasana.jpg" class="rounded-circle float" alt="conditioning" width="300" height="300">
+                <img src="images/hastapadasana.jpg" class="rounded-circle float" alt="conditioning" width="300" height="300">
                 <div class="rounded border border-white p-3 bg-light text-center mt-4 mb-4 mx-4 h-auto card">
                     <h2>2. Asanas</h2>
                     <p-1>ૐ</p-1>
@@ -129,7 +129,7 @@
             </div>
 
             <div class="col-md-12 py-4 d-flex align-items-center">
-                <img src="public_html/images/pranayama.jpg" class="rounded-circle" alt="conditioning" width="300" height="300">
+                <img src="images/pranayama.jpg" class="rounded-circle" alt="conditioning" width="300" height="300">
                 <div class="rounded border border-white p-3 bg-light text-center mt-4 mb-4 mx-4 h-auto card">
                     <h2>3. Pranayamas</h2>
                     <p-1>ૐ</p-1>
@@ -138,7 +138,7 @@
             </div>
 
             <div class="col-md-12 py-4 d-flex align-items-center">
-                <img src="public_html/images/shavasana.jpg" class="rounded-circle" alt="conditioning" width="300" height="300">
+                <img src="images/shavasana.jpg" class="rounded-circle" alt="conditioning" width="300" height="300">
                 <div class="rounded border border-white p-3 bg-light text-center mt-4 mb-4 mx-4 h-auto card">
                     <h2>4. Meditation</h2>
                     <p-1>ૐ</p-1>
@@ -229,7 +229,7 @@
 <!--Section-5: About Me-->
 <div class="section-5">
     <div class="container-fluid">
-        <img src="public_html/images/mirjam.jpg" class="rounded-circle" alt="Mirjam" width="250" height="250">
+        <img src="images/mirjam.jpg" class="rounded-circle" alt="Mirjam" width="250" height="250">
         <h1>About Me</h1>
         <div class="about-me">
             <p>My love for Yoga did not develop overnight, it took me a few years to get into it. Being someone who used
@@ -328,7 +328,7 @@
 <script src="https://www.google.com/recaptcha/api.js" async defer></script>
 
 <!--Custom jquery script-->
-<script src="form-script.js"></script>
+<script src="scripts/form-script.js"></script>
 
 </body>
 
