minor change to html file and image.

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div class="container-section-2">
             <div class="row">
                 <div class="col-sm-6">
-                    <img src="images/india-01.jpg" class="img-fluid" alt="India." width="750" height="550">
+                    <img src="images/india.jpg/" class="img-fluid" alt="India." width="750" height="550">
                 </div>
 
                 <div class="col-sm-6">
@@ -74,7 +74,7 @@
 
 
 <!--<div class="section-2">
-    <img class=india src="public_html/images/india-01.jpg" alt="India-1" width="750" height="550">
+    <img class=india src="public_html/images/india.jpg" alt="India-1" width="750" height="550">
     <div class="quote-2">
         <p><b><i>"Yoga is Samadhi - a deep state of concentration."</i></b></p>
     </div>
@@ -110,7 +110,7 @@
         <h1>Sequence</h1>
         <div class="row">
             <div class="col-md-12 py-4 d-flex align-items-center">
-                <img src="images/conditioning-4.jpg" class="rounded-circle float" alt="conditioning" width="300" height="300">
+                <img src="images/conditioning.jpg" class="rounded-circle float" alt="conditioning" width="300" height="300">
                 <div class="rounded border border-white p-3 bg-light text-center mt-4 mb-4 mx-4 h-auto card">
                     <h2>1. Conditioning</h2>
                     <p-1>ૐ</p-1>
