changed index-image-1 to a parallex.

--- a/index.html
+++ b/index.html
@@ -41,8 +41,14 @@
 </nav>
 
 <!--index-image-1 (Lord Ganesha)-->
-<div class="index-image-1">
-    <img src="images/yoga-is-samadhi.png" class="img-fluid" alt="Lord Ganesha">
+<!--<div class="index-image-1">
+    <img src="images/yoga-is-samadhi-orange.png" class="img-fluid" alt="Lord Ganesha">
+</div>-->
+
+<div class="ganesha-section">
+    <div class="top-heading">
+        <h1>Yoga is Samadhi</h1>
+    </div>
 </div>
 
 <!--Section-1-->
