--- a/index.html
+++ b/index.html
@@ -19,7 +19,6 @@
     <script src="scripts/form-script.js"></script>
 
 </head>
-
 <body>
 <!--Navbar section-->
 <nav class="navbar navbar-expand-md navbar-dark p-3 bg-dark">
@@ -40,18 +39,14 @@
     </div>
 </nav>
 
-<!--index-image-1 (Lord Ganesha)-->
-<!--<div class="index-image-1">
-    <img src="images/yoga-is-samadhi-orange.png" class="img-fluid" alt="Lord Ganesha">
-</div>-->
-
+<!--Lord Ganesha Section Parallax-->
 <div class="ganesha-section">
     <div class="top-heading">
         <h1>Yoga is Samadhi</h1>
     </div>
 </div>
 
-<!--Section-1-->
+<!--Section-1: Quote-1 "Yoga Chittavritti Nirodha"-->
 <div class="section-1">
     <div class="container-fluid-quote-1">
         <p><i>"Yoga Chittavritti Nirodha"</i></p>
@@ -60,8 +55,31 @@
     </div>
 </div>
 
-<!--Section-2-->
-<div class="section-2">
+<!--Section-2 "India" image and quote-2-->
+
+<!--<div class="section-2">
+    <img src="images/image-quote-2.png" alt="India">
+</div>-->
+
+<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+    <div class="carousel-inner">
+        <div class="carousel-item active">
+            <img class="d-block w-100" src="images/1.png" alt="First slide">
+        </div>
+        <div class="carousel-item">
+            <img class="d-block w-100" src="images/2.png" alt="Second slide">
+        </div>
+    </div>
+    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+    </a>
+    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+    </a>
+</div>
+
+
+<!--<div class="section-2">
     <div class="py-2 my-2">
         <div class="container-section-2">
             <div class="row">
@@ -70,14 +88,12 @@
                 </div>
 
                 <div class="col-sm-6">
-                    <p><b><i>"Yoga is Samadhi - a deep state of concentration."</i></b></p>
+                    <h1><b><i>"Yoga is Samadhi - a deep state of concentration."</i></b></h1>
                 </div>
             </div>
         </div>
     </div>
-</div>
-
-
+</div>-->
 
 <!--<div class="section-2">
     <img class=india src="public_html/images/india.jpg" alt="India-1" width="750" height="550">
@@ -87,7 +103,7 @@
 </div>-->
 
 <!--Section-3-->
-<div class="section-3">
+<!--<div class="section-3">
     <div class="py-2 my-2">
         <div class="container-section-2">
             <div class="row">
@@ -101,7 +117,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 
 <!--<div class="section-3">
     <img class=oil-lamp src="public_html/images/oil-lamp.jpg" alt="oil-lamp" width="750" height="550">
