--- a/public_html/index.html
+++ b/public_html/index.html
@@ -56,75 +56,26 @@
 </div>
 
 <!--Section-2 "India" image and quote-2-->
-
-<!--<div class="section-2">
-    <img src="images/image-quote-2.png" alt="India">
-</div>-->
-
-<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
-    <div class="carousel-inner">
-        <div class="carousel-item active">
-            <img class="d-block w-100" src="images/1.png" alt="First slide">
-        </div>
-        <div class="carousel-item">
-            <img class="d-block w-100" src="images/2.png" alt="Second slide">
-        </div>
-    </div>
-    <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    </a>
-</div>
-
-
-<!--<div class="section-2">
-    <div class="py-2 my-2">
-        <div class="container-section-2">
-            <div class="row">
-                <div class="col-sm-6">
-                    <img src="images/india.jpg/" class="img-fluid" alt="India." width="750" height="550">
+<section-2>
+    <container>
+        <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img class="d-block w-100" src="images/1.png" alt="First slide">
                 </div>
-
-                <div class="col-sm-6">
-                    <h1><b><i>"Yoga is Samadhi - a deep state of concentration."</i></b></h1>
+                <div class="carousel-item">
+                    <img class="d-block w-100" src="images/2.png" alt="Second slide">
                 </div>
             </div>
+            <a class="carousel-control-prev" href="#carouselExampleControls" role="button" data-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            </a>
+            <a class="carousel-control-next" href="#carouselExampleControls" role="button" data-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            </a>
         </div>
-    </div>
-</div>-->
-
-<!--<div class="section-2">
-    <img class=india src="public_html/images/india.jpg" alt="India-1" width="750" height="550">
-    <div class="quote-2">
-        <p><b><i>"Yoga is Samadhi - a deep state of concentration."</i></b></p>
-    </div>
-</div>-->
-
-<!--Section-3-->
-<!--<div class="section-3">
-    <div class="py-2 my-2">
-        <div class="container-section-2">
-            <div class="row">
-                <div class="col-sm-6">
-                    <img src="images/oil-lamp.jpg" class="img-fluid" alt="India." width="750" height="550">
-                </div>
-
-                <div class="col-sm-6">
-                    <p><b><i>The stillness of your mind can be attained once you learn how to keep your body still.</i></b></p>
-                </div>
-            </div>
-        </div>
-    </div>
-</div>-->
-
-<!--<div class="section-3">
-    <img class=oil-lamp src="public_html/images/oil-lamp.jpg" alt="oil-lamp" width="750" height="550">
-    <div class="quote-3">
-        <p><b><i>The stillness of your mind can be attained once you learn how to keep your body still.</i></b></p>
-    </div>
-</div>-->
+    </container>
+</section-2>
 
 <!--Section 4-->
 <div class="section-4">
@@ -171,83 +122,6 @@
     </div>
 </div>
 
-    <!--<div class="card" style="width: 18rem;">
-        <img src="public_html/images/conditioning-2.jpg" class="card-img-top" alt="Conditioning">
-        <div class="card-body">
-            <p class="Conditioning">Conditioning is a method that helps to increase focus and concentration. It is often done
-                guided with the instructor or guru reciting a prayer.</p>
-        </div>
-    </div>
-
-    <div class="card" style="width: 18rem;">
-        <img src="public_html/images/hastapadasana.jpg" class="card-img-top" alt="Asanas">
-        <div class="card-body">
-            <p class="Asanas">he Asanas I am certified to teach are taken from traditional Hatha Yoga. They are chosen based on
-                the overall directional stretch of the spine and are beginner friendly. They can be easily adjusted
-                to match more difficult variations.</p>
-        </div>
-    </div>
-</div>-->
-
-<!--<div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
-    <div class="carousel-indicators">
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active"
-                aria-current="true" aria-label="Conditioning"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1"
-                aria-label="Asanas"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2"
-                aria-label="Pranayams"></button>
-        <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="3"
-                aria-label="Meditation"></button>
-    </div>
-    <div class="carousel-inner">
-        <div class="carousel-item active border-bottom-darkorange">
-            <img src="public_html/images/conditioning-3.jpg" class="d-block w-100" alt="Conditioning">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Conditioning</h5>
-                <p>Conditioning is a method that helps to increase focus and concentration. It is often done
-                    guided with the instructor or guru reciting a prayer.</p>
-            </div>
-        </div>
-        <div class="carousel-item border-bottom-darkorange">
-            <img src="public_html/images/hastapadasana.jpg" class="d-block w-100" alt="Asanas">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Asanas</h5>
-                <p>The Asanas I am certified to teach are taken from traditional Hatha Yoga. They are chosen based on
-                    the overall directional stretch of the spine and are beginner friendly. They can be easily adjusted
-                    to match more difficult variations.</p>
-            </div>
-        </div>
-        <div class="carousel-item border-bottom-darkorange">
-            <img src="public_html/images/pranayama.jpg" class="d-block w-100" alt="Pranayams">
-            <div class="carousel-caption d-none d-md-block">
-                <h5>Pranayamas</h5>
-                <p>Pranayams or Pranayamas are breathing exercises to increase the capacity of your lungs and help with
-                    oxygen and blood flow. Depending on individual conditions there are special varieties that can aid
-                    in overall balance of the system. There are also Pranayams that are safe for everyone to practice,
-                    i.e. Brahmari.</p>
-            </div>
-        </div>
-    </div>
-    <div class="carousel-item border-bottom-darkorange">
-        <img src="public_html/images/shavasana.jpg" class="d-block w-100" alt="Meditation">
-        <div class="carousel-caption d-none d-md-block">
-            <h5>Meditation</h5>
-            <p>Every Yoga session should finish with mindful relaxation. This is often achieved through Shavasana ("The
-                Corpse Pose"). Similar to conditioning at the beginning of each session, you can finish with a prayer or
-                simply by chanting Aum ૐ.</p>
-        </div>
-    </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Previous</span>
-    </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="visually-hidden">Next</span>
-    </button>
-</div>-->
-
 <!--Section-5: About Me-->
 <div class="section-5">
     <div class="container-fluid">
@@ -288,7 +162,7 @@
 
 
         <div id="formContainer" class="container">
-            <form id="contact" action="http://localhost:4200/apis" method="post" novalidate>
+            <form action="./apis/" id="contact" method="post" novalidate>
             <div class="mb-3">
                 <label for="name" class="form-contact">Your Name</label>
                 <input type="text" class="form-control" id="name" name="name" placeholder="Name">
@@ -319,9 +193,6 @@
             <button class="button-mantra">Receive Mantra</button>
         </div>
 </div>
-
-
-
 
 <!--Sticky Footer-->
 <footer class="footer mt-auto p-3 bg-dark">
