--- a/public_html/index.html
+++ b/public_html/index.html
@@ -79,20 +79,53 @@
 
 <!--Section 4-->
 <div class="section-4">
-    <div class="container-fluid">
-        <h1>Sequence</h1>
+    <div class="container">
         <div class="row">
-            <div class="col-md-12 py-4 d-flex align-items-center">
+            <h1>Sequence</h1>
+            <div class="col-md-6 py-4">
                 <img src="images/conditioning.jpg" class="rounded-circle float" alt="conditioning" width="300" height="300">
-                <div class="rounded border border-white p-3 bg-light text-center mt-4 mb-4 mx-4 h-auto card">
+            </div>
+                <div class="col-md-6 pt-4 px-2 rounded border border-white bg-light text-center mt-4 mb-4 mx-4 h-auto card">
                     <h2>1. Conditioning</h2>
                     <p-1>ૐ</p-1>
                     <p>Conditioning is a method that helps to increase focus and concentration. It is often done
                         guided with the instructor or guru reciting a prayer.</p>
                 </div>
+
+
+            <div class="col-md-6">
+                <img src="images/hastapadasana.jpg" class="rounded-circle float" alt="asanas" width="300" height="300">
+            </div>
+            <div class="col-md-6 pt-4 px-2 rounded border border-white bg-light text-center mt-4 mb-4 mx-4 h-auto card">
+                <h2>2. Asanas</h2>
+                <p-1>ૐ</p-1>
+                <p>The Asanas I am certified to teach are taken from traditional Hatha Yoga. They are chosen based on the overall directional stretch of the spine and are beginner friendly. They can be easily adjusted to match more difficult variations.</p>
             </div>
 
-            <div class="col-md-12 py-4 d-flex align-items-center">
+
+            <div class="col-md-6">
+                <img src="images/pranayama.jpg" class="rounded-circle float" alt="pranayamas" width="300" height="300">
+            </div>
+            <div class="col-md-6 pt-4 px-2 rounded border border-white bg-light text-center mt-4 mb-4 mx-4 h-auto card">
+                <h2>3. Pranayamas</h2>
+                <p-1>ૐ</p-1>
+                <p>Pranayams or Pranayamas are breathing exercises to increase the capacity of your lungs and help with oxygen and blood flow. Depending on individual conditions there are special varieties that can aid in overall balance of the system. There are also Pranayams that are safe for everyone to practice, i.e. Brahmari.</p>
+            </div>
+
+
+            <div class="col-md-6">
+                <img src="images/shavasana.jpg" class="rounded-circle float" alt="meditation" width="300" height="300">
+            </div>
+            <div class="col-md-6 pt-4 px-2 rounded border border-white bg-light text-center mt-4 mb-4 mx-4 h-auto card">
+                <h2>4. Meditation</h2>
+                <p-1>ૐ</p-1>
+                <p>Every Yoga session should finish with mindful relaxation. This is often achieved through Shavasana ("The Corpse Pose"). Similar to conditioning at the beginning of each session, you can finish with a prayer or simply by chanting Aum.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
+            <!--<div class="col-md-12 py-4 d-flex align-items-center">
                 <img src="images/hastapadasana.jpg" class="rounded-circle float" alt="conditioning" width="300" height="300">
                 <div class="rounded border border-white p-3 bg-light text-center mt-4 mb-4 mx-4 h-auto card">
                     <h2>2. Asanas</h2>
@@ -120,7 +153,7 @@
             </div>
         </div>
     </div>
-</div>
+</div>-->
 
 <!--Section-5: About Me-->
 <div class="section-5">
